# dcm-anon

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build-doc.yml  release.yml  test.yml
dcm-anon/: Annon_DICOM_TAGs.m  __init__.py  anonimizer.py  base.py
dcm-anon/utils/: datetime.py  dcm.py  hash.py
dcm_anon/: __init__.py  anonimizer.py  base.py
dcm_anon/utils/: datetime.py  dcm.py  hash.py  tags.py
tests/: conftest.py  pytest.ini  test_00_utils.py
