[tool.poetry]
name = "dcm-anon"
version = "0.0.1"
description = "A Pure Python DCM Anonymizer"
authors = ["Abhijeet Parida <abhijeet.parida@tum.de>"]
license = "MIT"
repository = 'https://github.com/a-parida12/dcm-anon'
readme = 'README.md'
keywords = ["dicom anonimization", "anonimized-data", "dicom", "dcm", "GDPR", "HIPPA"]

[tool.poetry.dependencies]
python = "^3.8"
pydicom = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^4.0.1"
commitizen = "^3.2.1"
bandit = "^1.7.5"
pdoc3 = "^0.10.0"
pre-commit = "^3.3.1"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"